# networked-midi

./: Cargo.toml
src/client/: main.rs
src/server/: main.rs
