[package]
name = "networked-midi"
version = "0.1.0"
authors = ["Nachi <nachiketa.gargi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
structopt = { version = "0.3", default-features = false }
lazy_static = "1.4.0"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"